--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,22 +19,11 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "ui-core-atoms": [
-        "libs/ui-core-atoms/src/index.ts"
-      ],
-      "ui-core-shared": [
-        "libs/ui-core-shared/src/index.ts"
-      ],
-      "ui-core-storybook": [
-        "libs/ui-core-storybook/src/index.ts"
-      ],
-      "ui-core-wc-atoms": [
-        "libs/ui-core-wc-atoms/src/index.ts"
-      ]
+      "@ui-core/storybook": ["libs/ui-core-storybook/src/index.ts"],
+      "ui-core-atoms": ["libs/ui-core-atoms/src/index.ts"],
+      "ui-core-shared": ["libs/ui-core-shared/src/index.ts"],
+      "ui-core-wc-atoms": ["libs/ui-core-wc-atoms/src/index.ts"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
