try custom webpack plugin

--- a/libs/ui-core-storybook/.storybook/tsconfig.json
+++ b/libs/ui-core-storybook/.storybook/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "emitDecoratorMetadata": true
   },
-  "exclude": ["../**/*.spec.ts"],
+  "exclude": [
+    "../**/*.spec.ts"
+  ],
   "include": [
     "../src/**/*.stories.ts",
     "../src/**/*.stories.js",
@@ -11,6 +13,7 @@
     "../src/**/*.stories.tsx",
     "../src/**/*.stories.mdx",
     "*.js",
-    "*.ts"
+    "*.ts",
+    "../../../typings.d.ts"
   ]
 }
