--- a/libs/ui-core-styles/tsconfig.lib.json
+++ b/libs/ui-core-styles/tsconfig.lib.json
@@ -3,16 +3,17 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
-    "types": [
-      "node"
-    ]
+    "declarationMap": true,
+    "inlineSources": true,
+    "types": []
   },
   "exclude": [
-    "jest.config.ts",
     "src/**/*.spec.ts",
+    "src/test-setup.ts",
+    "jest.config.ts",
     "src/**/*.test.ts"
   ],
-  "include": [
-    "src/**/*.ts"
+  "include": ["src/**/*.ts",
+    "../../typings.d.ts"
   ]
 }
