--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@storybook/addon-docs": "^8.2.6",
     "@storybook/addon-essentials": "^8.2.6",
     "@storybook/addon-interactions": "^8.2.6",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/angular": "^8.2.6",
+    "@storybook/builder-webpack5": "^8.2.9",
     "@storybook/core-server": "^8.2.6",
     "@storybook/jest": "^0.2.3",
     "@storybook/test-runner": "^0.13.0",
@@ -42,6 +44,7 @@
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
     "autoprefixer": "^10.4.0",
+    "css-loader": "^7.1.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "http-server": "^14.1.1",
@@ -51,17 +54,24 @@
     "jest-preset-angular": "~14.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "lit": "^3.1.4",
+    "mini-css-extract-plugin": "^2.9.1",
     "ng-packagr": "~18.1.0",
     "nx": "19.5.3",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.45",
+    "postcss-loader": "^8.1.1",
+    "postcss-preset-env": "^10.0.2",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "remark-gfm": "^4.0.0",
     "storybook": "8.2.x",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "workspaces": [
     "packages/*"
