--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,27 +3,45 @@
   "compilerOptions": {
     "rootDir": ".",
     "sourceMap": true,
-    "declaration": false,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
     "importHelpers": true,
-    "target": "es2015",
+    "target": "es2022",
     "module": "esnext",
     "lib": [
-      "es2020",
+      "es2022",
       "dom"
     ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ui-core/storybook": ["libs/ui-core-storybook/src/index.ts"],
-      "ui-core-atoms": ["libs/ui-core-atoms/src/index.ts"],
-      "ui-core-shared": ["libs/ui-core-shared/src/index.ts"],
-      "ui-core-wc-atoms": ["libs/ui-core-wc-atoms/src/index.ts"]
+      "@ui-core/storybook": [
+        "libs/ui-core-storybook/src/index.ts"
+      ],
+      "@ui-core/styles": [
+        "libs/ui-core-styles/src/index.ts"
+      ],
+      "ui-core-atoms": [
+        "libs/ui-core-atoms/src/index.ts"
+      ],
+      "ui-core-shared": [
+        "libs/ui-core-shared/src/index.ts"
+      ],
+      "ui-core-wc-atoms": [
+        "libs/ui-core-wc-atoms/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ],
+  "include": [
+    "typings.d.ts"
+  ]
 }
