--- a/package.json
+++ b/package.json
@@ -1,78 +1,81 @@
 {
-    "name": "bsc-thesis",
-    "version": "0.0.0",
-    "license": "MIT",
-    "scripts": {
-        "sb": "npx nx run ui-core-storybook:storybook"
-    },
-    "private": true,
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~18.1.0",
-        "@angular-devkit/core": "~18.1.0",
-        "@angular-devkit/schematics": "~18.1.0",
-        "@angular-eslint/eslint-plugin": "^18.0.1",
-        "@angular-eslint/eslint-plugin-template": "^18.0.1",
-        "@angular-eslint/template-parser": "^18.0.1",
-        "@angular/cli": "~18.1.0",
-        "@angular/compiler-cli": "~18.1.0",
-        "@angular/language-service": "~18.1.0",
-        "@nx/angular": "^19.5.3",
-        "@nx/eslint": "19.5.3",
-        "@nx/eslint-plugin": "19.5.3",
-        "@nx/jest": "19.5.3",
-        "@nx/js": "19.5.3",
-        "@nx/node": "^19.5.3",
-        "@nx/storybook": "^19.5.3",
-        "@nx/web": "19.5.3",
-        "@schematics/angular": "~18.1.0",
-        "@storybook/addon-docs": "^8.2.6",
-        "@storybook/addon-essentials": "^8.2.6",
-        "@storybook/addon-interactions": "^8.2.6",
-        "@storybook/angular": "^8.2.6",
-        "@storybook/core-server": "^8.2.6",
-        "@storybook/jest": "^0.2.3",
-        "@storybook/test-runner": "^0.13.0",
-        "@storybook/testing-library": "^0.2.2",
-        "@swc-node/register": "~1.9.1",
-        "@swc/core": "~1.5.7",
-        "@swc/helpers": "~0.5.11",
-        "@types/jest": "^29.4.0",
-        "@types/node": "18.16.9",
-        "@typescript-eslint/eslint-plugin": "^7.16.0",
-        "@typescript-eslint/parser": "^7.16.0",
-        "@typescript-eslint/utils": "^7.16.0",
-        "eslint": "~8.57.0",
-        "eslint-config-prettier": "^9.0.0",
-        "http-server": "^14.1.1",
-        "jest": "^29.4.1",
-        "jest-environment-jsdom": "^29.4.1",
-        "jest-environment-node": "^29.4.1",
-        "jest-preset-angular": "~14.1.0",
-        "lit": "^3.1.4",
-        "nx": "19.5.3",
-        "prettier": "^2.6.2",
-        "remark-gfm": "^4.0.0",
-        "storybook": "8.2.x",
-        "ts-jest": "^29.1.0",
-        "ts-node": "10.9.1",
-        "typescript": "~5.5.2"
-    },
-    "workspaces": [
-        "packages/*"
-    ],
-    "dependencies": {
-        "@angular/animations": "~18.1.0",
-        "@angular/common": "~18.1.0",
-        "@angular/compiler": "~18.1.0",
-        "@angular/core": "~18.1.0",
-        "@angular/forms": "~18.1.0",
-        "@angular/platform-browser": "~18.1.0",
-        "@angular/platform-browser-dynamic": "~18.1.0",
-        "@angular/router": "~18.1.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.14.3"
-    }
+  "name": "bsc-thesis",
+  "version": "0.0.0",
+  "license": "MIT",
+  "scripts": {
+    "sb": "npx nx run ui-core-storybook:storybook"
+  },
+  "private": true,
+  "devDependencies": {
+    "@analogjs/vite-plugin-angular": "^1.8.0",
+    "@angular-devkit/build-angular": "18.2.4",
+    "@angular-devkit/core": "18.2.4",
+    "@angular-devkit/schematics": "18.2.4",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "~18.2.0",
+    "@angular/compiler-cli": "18.2.4",
+    "@angular/language-service": "18.2.4",
+    "@chromatic-com/storybook": "^1.9.0",
+    "@nitedani/vite-plugin-angular": "^17.0.11",
+    "@nx/angular": "19.7.3",
+    "@nx/eslint": "19.7.3",
+    "@nx/eslint-plugin": "19.7.3",
+    "@nx/jest": "19.7.3",
+    "@nx/js": "19.7.3",
+    "@nx/node": "19.7.3",
+    "@nx/storybook": "19.7.3",
+    "@nx/web": "19.7.3",
+    "@schematics/angular": "18.2.4",
+    "@storybook/addon-docs": "^8.2.6",
+    "@storybook/addon-essentials": "8.3.0",
+    "@storybook/addon-interactions": "8.3.0",
+    "@storybook/addon-mdx-gfm": "^8.3.0",
+    "@storybook/angular": "8.3.0",
+    "@storybook/builder-vite": "^8.3.0",
+    "@storybook/core-server": "8.3.0",
+    "@storybook/test": "^8.3.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "29.5.13",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "http-server": "^14.1.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "^29.4.1",
+    "jest-preset-angular": "~14.1.0",
+    "lit": "^3.1.4",
+    "nx": "19.7.3",
+    "prettier": "^2.6.2",
+    "remark-gfm": "^4.0.0",
+    "storybook": "8.3.0",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.5.2"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "dependencies": {
+    "@angular/animations": "18.2.4",
+    "@angular/common": "18.2.4",
+    "@angular/compiler": "18.2.4",
+    "@angular/core": "18.2.4",
+    "@angular/forms": "18.2.4",
+    "@angular/platform-browser": "18.2.4",
+    "@angular/platform-browser-dynamic": "18.2.4",
+    "@angular/router": "18.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.3"
+  }
 }
