--- a/libs/ui-core-storybook/project.json
+++ b/libs/ui-core-storybook/project.json
@@ -22,9 +22,7 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "libs/ui-core-storybook/jest.config.ts"
       }
