--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "sb": "npx nx run ui-core-storybook:storybook",
-    "format": "npx nx format:write"
+    "sb": "npx nx run ui-core-storybook:storybook"
   },
   "private": true,
   "devDependencies": {
