add buildable to ui-styles as well as ui-storybook

--- a/libs/ui-core-styles/package.json
+++ b/libs/ui-core-styles/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ui-core/storybook",
+  "name": "@ui-core/styles",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.2.0",
