--- a/libs/ui-core-storybook/project.json
+++ b/libs/ui-core-storybook/project.json
@@ -2,23 +2,26 @@
   "name": "ui-core-storybook",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/ui-core-storybook/src",
+  "prefix": "lib",
   "projectType": "library",
-  "prefix": "bui",
   "tags": [],
   "targets": {
-    "storybook": {
-      "executor": "nx:run-commands",
+    "build": {
+      "executor": "@nx/angular:package",
+      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "cwd": "libs/ui-core-storybook",
-        "command": "storybook dev --port 8800"
-      }
-    },
-    "build-storybook": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "libs/ui-core-storybook",
-        "command": "storybook build --output-dir ../../dist/storybook/my-app"
-      }
+        "project": "libs/ui-core-storybook/ng-package.json",
+        "tailwindConfig": "libs/ui-core-storybook/tailwind.config.js"
+      },
+      "configurations": {
+        "production": {
+          "tsConfig": "libs/ui-core-storybook/tsconfig.lib.prod.json"
+        },
+        "development": {
+          "tsConfig": "libs/ui-core-storybook/tsconfig.lib.json"
+        }
+      },
+      "defaultConfiguration": "production"
     },
     "test": {
       "executor": "@nx/jest:jest",
@@ -29,6 +32,55 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint"
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/ui-core-storybook/.storybook",
+        "browserTarget": "ui-core-storybook:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/ui-core-storybook",
+        "configDir": "libs/ui-core-storybook/.storybook",
+        "browserTarget": "ui-core-storybook:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c libs/ui-core-storybook/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "dependsOn": ["build-storybook"],
+      "options": {
+        "buildTarget": "ui-core-storybook:build-storybook",
+        "staticFilePath": "dist/storybook/ui-core-storybook",
+        "spa": true
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "ui-core-storybook:build-storybook:ci"
+        }
+      }
     }
   }
 }
