--- a/libs/ui-core-storybook/project.json
+++ b/libs/ui-core-storybook/project.json
@@ -8,7 +8,9 @@
   "targets": {
     "build": {
       "executor": "@nx/angular:package",
-      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/dist/{projectRoot}"
+      ],
       "options": {
         "project": "libs/ui-core-storybook/ng-package.json",
         "tailwindConfig": "libs/ui-core-storybook/tailwind.config.js"
@@ -25,7 +27,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "libs/ui-core-storybook/jest.config.ts"
       }
@@ -34,32 +38,17 @@
       "executor": "@nx/eslint:lint"
     },
     "storybook": {
-      "executor": "@storybook/angular:start-storybook",
+      "executor": "nx:run-commands",
       "options": {
-        "port": 4400,
-        "configDir": "libs/ui-core-storybook/.storybook",
-        "browserTarget": "ui-core-storybook:build-storybook",
-        "compodoc": false
-      },
-      "configurations": {
-        "ci": {
-          "quiet": true
-        }
+        "cwd": "libs/ui-core-storybook",
+        "command": "storybook dev --port 8800"
       }
     },
     "build-storybook": {
-      "executor": "@storybook/angular:build-storybook",
-      "outputs": ["{options.outputDir}"],
+      "executor": "nx:run-commands",
       "options": {
-        "outputDir": "dist/storybook/ui-core-storybook",
-        "configDir": "libs/ui-core-storybook/.storybook",
-        "browserTarget": "ui-core-storybook:build-storybook",
-        "compodoc": false
-      },
-      "configurations": {
-        "ci": {
-          "quiet": true
-        }
+        "cwd": "libs/ui-core-storybook",
+        "command": "storybook build --output-dir ../../dist/storybook/my-app"
       }
     },
     "test-storybook": {
@@ -70,7 +59,9 @@
     },
     "static-storybook": {
       "executor": "@nx/web:file-server",
-      "dependsOn": ["build-storybook"],
+      "dependsOn": [
+        "build-storybook"
+      ],
       "options": {
         "buildTarget": "ui-core-storybook:build-storybook",
         "staticFilePath": "dist/storybook/ui-core-storybook",
