--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@nx/js": "19.7.3",
     "@nx/node": "19.7.3",
     "@nx/storybook": "19.7.3",
+    "@nx/vite": "19.7.3",
     "@nx/web": "19.7.3",
     "@schematics/angular": "18.2.4",
-    "@storybook/addon-docs": "^8.2.6",
+    "@storybook/addon-docs": "8.3.0",
     "@storybook/addon-essentials": "8.3.0",
     "@storybook/addon-interactions": "8.3.0",
     "@storybook/addon-mdx-gfm": "^8.3.0",
@@ -45,13 +46,14 @@
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "@typescript-eslint/utils": "^7.16.0",
+    "@vitest/ui": "^1.3.1",
     "autoprefixer": "^10.4.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "http-server": "^14.1.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-environment-node": "^29.4.1",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "jsonc-eslint-parser": "^2.1.0",
     "lit": "^3.1.4",
@@ -65,7 +67,11 @@
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "verdaccio": "^5.0.4",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
+    "vitest": "^1.3.1"
   },
   "workspaces": [
     "packages/*"
@@ -84,5 +90,8 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
