--- a/package.json
+++ b/package.json
@@ -9,35 +9,33 @@
   "private": true,
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "^1.8.0",
-    "@angular-devkit/build-angular": "18.2.4",
-    "@angular-devkit/core": "18.2.4",
-    "@angular-devkit/schematics": "18.2.4",
+    "@angular-devkit/core": "18.2.5",
+    "@angular-devkit/schematics": "18.2.5",
     "@angular-eslint/eslint-plugin": "^18.0.1",
     "@angular-eslint/eslint-plugin-template": "^18.0.1",
     "@angular-eslint/template-parser": "^18.0.1",
-    "@angular/cli": "~18.2.0",
-    "@angular/compiler-cli": "18.2.4",
-    "@angular/language-service": "18.2.4",
+    "@angular/cli": "18.2.5",
+    "@angular/compiler-cli": "18.2.5",
+    "@angular/language-service": "18.2.5",
     "@chromatic-com/storybook": "^1.9.0",
-    "@nitedani/vite-plugin-angular": "^17.0.11",
-    "@nx/angular": "19.7.3",
-    "@nx/eslint": "19.7.3",
-    "@nx/eslint-plugin": "19.7.3",
-    "@nx/jest": "19.7.3",
-    "@nx/js": "19.7.3",
-    "@nx/node": "19.7.3",
-    "@nx/storybook": "19.7.3",
-    "@nx/vite": "19.7.3",
-    "@nx/web": "19.7.3",
-    "@schematics/angular": "18.2.4",
-    "@storybook/addon-docs": "8.3.0",
-    "@storybook/addon-essentials": "8.3.0",
-    "@storybook/addon-interactions": "8.3.0",
-    "@storybook/addon-mdx-gfm": "^8.3.0",
-    "@storybook/angular": "8.3.0",
-    "@storybook/builder-vite": "^8.3.0",
-    "@storybook/core-server": "8.3.0",
-    "@storybook/test": "^8.3.0",
+    "@nx/angular": "19.8.0",
+    "@nx/eslint": "19.8.0",
+    "@nx/eslint-plugin": "19.8.0",
+    "@nx/jest": "19.8.0",
+    "@nx/js": "19.8.0",
+    "@nx/node": "19.8.0",
+    "@nx/storybook": "19.8.0",
+    "@nx/vite": "19.8.0",
+    "@nx/web": "19.8.0",
+    "@schematics/angular": "18.2.5",
+    "@storybook/addon-docs": "8.3.2",
+    "@storybook/addon-essentials": "8.3.2",
+    "@storybook/addon-interactions": "8.3.2",
+    "@storybook/addon-mdx-gfm": "^8.3.2",
+    "@storybook/angular": "8.3.2",
+    "@storybook/builder-vite": "^8.3.2",
+    "@storybook/core-server": "8.3.2",
+    "@storybook/test": "^8.3.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -58,33 +56,33 @@
     "jsonc-eslint-parser": "^2.1.0",
     "lit": "^3.1.4",
     "ng-packagr": "~18.2.0",
-    "nx": "19.7.3",
+    "nx": "19.8.0",
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "remark-gfm": "^4.0.0",
-    "storybook": "8.3.0",
+    "storybook": "8.3.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "verdaccio": "^5.0.4",
     "vite": "^5.0.0",
-    "vite-plugin-dts": "~3.8.1",
+    "vite-plugin-dts": "^4.2.2",
     "vitest": "^1.3.1"
   },
   "workspaces": [
     "packages/*"
   ],
   "dependencies": {
-    "@angular/animations": "18.2.4",
-    "@angular/common": "18.2.4",
-    "@angular/compiler": "18.2.4",
-    "@angular/core": "18.2.4",
-    "@angular/forms": "18.2.4",
-    "@angular/platform-browser": "18.2.4",
-    "@angular/platform-browser-dynamic": "18.2.4",
-    "@angular/router": "18.2.4",
+    "@angular/animations": "18.2.5",
+    "@angular/common": "18.2.5",
+    "@angular/compiler": "18.2.5",
+    "@angular/core": "18.2.5",
+    "@angular/forms": "18.2.5",
+    "@angular/platform-browser": "18.2.5",
+    "@angular/platform-browser-dynamic": "18.2.5",
+    "@angular/router": "18.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
