add tailwind into web-components

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "sb": "npx nx run ui-core-storybook:storybook",
-    "format": "npx nx format:write"
+    "format": "npx nx format:write",
+    "build": "npx nx affected:build --base=main --parallel=8",
+    "build:prod": "npx nx affected:build --base=main --parallel=8 --prod"
   },
   "private": true,
   "devDependencies": {
