--- a/libs/ui-core-atoms/project.json
+++ b/libs/ui-core-atoms/project.json
@@ -2,13 +2,15 @@
   "name": "ui-core-atoms",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/ui-core-atoms/src",
-  "prefix": "lib",
+  "prefix": "bui",
   "projectType": "library",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@nx/angular:package",
-      "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/dist/{projectRoot}"
+      ],
       "options": {
         "project": "libs/ui-core-atoms/ng-package.json"
       },
@@ -24,7 +26,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "libs/ui-core-atoms/jest.config.ts"
       }
