--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@angular/platform-browser": "18.2.5",
     "@angular/platform-browser-dynamic": "18.2.5",
     "@angular/router": "18.2.5",
+    "@lit/context": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
