--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "sb": "npx nx run ui-core-storybook:storybook",
-    "test": "npx nx run test-app:serve",
+    "test-app": "npx nx run test-app:serve",
     "format": "npx nx format:write",
     "build": "npx nx affected:build --base=main --parallel=8",
     "build:prod": "npx nx affected:build --base=main --parallel=8 --prod"
@@ -88,6 +88,7 @@
     "@angular/platform-browser-dynamic": "18.2.5",
     "@angular/router": "18.2.5",
     "@lit/context": "^1.1.3",
+    "@trellisorg/make-buildable": "^0.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
